Analizador_py/Gramatica.txt
Gramatica

<Inicio> -> <List_Plantillas>

<List_Plantillas> -> <Plantilla> <Plantillas2>

<Plantillas2> -> <Plantilla> <Plantillas2>
		| Epsilon 

<Plantilla> -> public <tipo_public>

<tipo_public> -> class identificador { <Instrucciones_class> }
		| interface identificador { <Instrucciones_funciones> }

<Instrucciones_class> -> <metodos> <Instrucciones_class> 
			| <declaracion_variables> <Instrucciones_class>
			| <Llamada> <Instrucciones_class>
			| <Instrucciones> <Instrucciones_class>
			| Epsilon

<Instrucciones_funciones> -> <funciones> <Instrucciones_funciones'>
			     | Epsilon

<Instrucciones_funciones'> -> <funciones> <Instrucciones_funciones'>
			      | Epsilon 

<funciones> -> public <tipo_metodo> identificador ( <parametros> );

<metodos> -> public <metodos2>

<metodos2> -> <tipo_metodo> identificador ( <parametros> ) {<Instrucciones>}
	      | static void main ( String [] args ) { <Instrucciones> }

<tipo_metodo> -> String
		| string
	        | int
	        | char
	        | double
	        | boolean
	        | void


<parametros> -> <parametro1> <parametros2>
		| Epsilon

<parametro1> -> <tipo_dato> identificador

<parametros2> -> , <parametro1> <parametros2>
		 | Epsilon

<tipo_dato> -> String
	      | string
	      | int
	      | char
	      | double
	      | boolean

<Instrucciones> -> <declaracion_variables> <Instrucciones>
		   | <sentencia_for> <Instucciones>
		   | <sentencia_while> <Instrucciones>
		   | <sentencia_do> <Instrucciones>
		   | <sentencia_if> <Instrucciones>
		   | <imprimir> <Instrucciones>
		   | <return> <instrucciones>
		   | <asig> <Instrucciones>
		   | continue;
		   | break;
		   | Epsilon

<Llamada> -> identificador <opcion_car>
	    | Epsilon

<opcion_car> -> = <expresion> ;
	       | ( <lista_expresiones> ) ;
	       | ++;
	       | --; 

<sentencia_for> -> for ( <declaracion_variable> ; <expresion> ; identificador <mas_mas> ) { <Instrucciones> }

<mas_mas> -> ++
	    | --

<sentencia_while> -> while ( <expresion> ) { <Instrucciones> }

<sentencia_do> -> do { <Instrucciones> } while ( <expresion> ) ;

<sentencia_if> -> if ( <expresion> ) { <Instrucciones> } <else>

<else> -> else <opcion_if>
	 | Epsilon

<opcion_if> -> <sentencia_if>
	      | { <Instrucciones> }

<return> -> return <expresion> ;
	    | return ;

<imprimir> -> System . out . print<ln> ( <expresion> ) ;

<ln> -> ln
       | Epsilon

<declaracion_variables> -> <tipo_dato> identificador <asignacion> <opcion_variable> ;

<asignacion> -> = <expresion>
	       | Epsilon

<opcion_variable> -> , identificador <asignacion> <opcion_variable>
		     | Epsilon

<asig> -> identificador = <expresion> ;
	 | identificador ++ ;
	 | identificador --;

<expresion> -> <E> <logico>

<logico > -> && <expresion>
	    | || <expresion>
	    | ! <expresion>
	    | ^ <expresion>
	    | > <expresion>
	    | < <expresion>
	    | >= <expresion>
	    | <= <expresion>
	    | == <expresion>
	    | != <expresion>
	    | Epsilon

<E> -> <T> <EP>

<EP> -> + <T> <EP>
      | - <T> <EP>
      | Epsilon

<T> -> <F> <TP>

<TP> -> * <F> <TP>
      | / <F> <TP>
      | Epsilon

<F> -> <valor>
     | numero_entero
     | numero_decimal
     | cadena
     | caracter
     | true
     | false
     | - <expresion>
     | ! <expresion>
     | ( <expresion> )

<valor> -> identificador <valor2>

<valor2> -> ( <lista_expresiones> )
	   | ++
	   | -- 
	   | Epsilon

<lista_expresiones> -> <expresion> <lista_expresiones2>
	              | Epsilon

<lista_expresion2> -> , <expresion> <lista_expresion2>
		     | Epsilon 
